# fpki-policy-tokenizer

./: .gitignore  README.md  convert_docx_to_md.sh  project_setup.sh  pyproject.toml  tokenize_policies.py
converted_markdown/: FCPCACPv1.17.md  FCPCACPv1.18.md  FCPCACPv1.19.md  FCPCACPv1.20.md  FCPCACPv1.21.md  FCPCACPv1.22.md  FCPCACPv1.23.md  FCPCACPv1.24.md  FCPCACPv1.25.md  FCPCACPv1.26.md  FCPCACPv1.27.md  FCPCACPv1.28.md  FCPCACPv1.29.md  FCPCACPv1.30.md  FCPCACPv1.31.md  FCPCACPv1.32.md  FCPCACPv2.0.md  FCPCACPv2.1.md  FCPCACPv2.2.md  FCPCACPv2.3.md  FCPCACPv2.4.md  FCPCACPv2.5.md  FCPCACPv2.6.md  minimal_test.md
original_docx/: FCPCACPv1.17.docx  FCPCACPv1.18.docx  FCPCACPv1.19.docx  FCPCACPv1.20.docx  FCPCACPv1.21.docx  FCPCACPv1.22.docx  FCPCACPv1.23.docx  FCPCACPv1.24.docx  FCPCACPv1.25.docx  FCPCACPv1.26.docx  FCPCACPv1.27.docx  FCPCACPv1.28.docx  FCPCACPv1.29.docx  FCPCACPv1.30.docx  FCPCACPv1.31.docx  FCPCACPv1.32.docx  FCPCACPv2.0.docx  FCPCACPv2.1.docx  FCPCACPv2.2.docx  FCPCACPv2.3.docx  FCPCACPv2.4.docx  FCPCACPv2.5.docx  FCPCACPv2.6.docx  minimal_test.docx
tokenized_markdown/: FCPCACPv1.17.md  FCPCACPv1.18.md  FCPCACPv1.19.md  FCPCACPv1.20.md  FCPCACPv1.21.md  FCPCACPv1.22.md  FCPCACPv1.23.md  FCPCACPv1.24.md  FCPCACPv1.25.md  FCPCACPv1.26.md  FCPCACPv1.27.md  FCPCACPv1.28.md  FCPCACPv1.29.md  FCPCACPv1.30.md  FCPCACPv1.31.md  FCPCACPv1.32.md  FCPCACPv2.0.md  FCPCACPv2.1.md  FCPCACPv2.2.md  FCPCACPv2.3.md  FCPCACPv2.4.md  FCPCACPv2.5.md  FCPCACPv2.6.md  minimal_test.md
